# scikit-shapes

./: #sudo su README.md  .buildinfo  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  api.html  build_doc_requirements.txt  codecov.yml  contributing.html  decimation.py  elasticmetric_different_losses.py  example.ipynb  example.py  genindex.html  index.html  installation.html  mkdocs.yml  motivation.html  new.vtk  newshape.vtk  noxfile.py  objects.inv  old.vtk  output.vtk  py-modindex.html  pyproject.toml  registration_animation.py  requirements.txt  requirements_dev.txt  requirements_docs.txt  rigidmotion_different_losses.py  run_landmark_setter.py  search.html  searchindex.js  setup.py  sg_execution_times.html  (+7 more)
.doctrees/: api.doctree  contributing.doctree  environment.pickle  index.doctree  installation.doctree  motivation.doctree  sg_execution_times.doctree
.doctrees/api/: modules.doctree  skshapes.applications.doctree  skshapes.convolutions.doctree  skshapes.data.doctree  skshapes.decimation.doctree  skshapes.doctree  skshapes.features.doctree  skshapes.input_validation.doctree  skshapes.loss.doctree  skshapes.morphing.doctree  skshapes.multiscaling.doctree  skshapes.optimization.doctree  skshapes.tasks.doctree  skshapes.triangle_mesh.doctree
.doctrees/auto_examples/: index.doctree  sg_execution_times.doctree
.doctrees/explanation/: index.doctree
.doctrees/stubs/: skshapes.Circle.doctree  skshapes.PolyData.doctree  skshapes.Sphere.doctree  skshapes.applications.barycentric_landmark_setter.BarycentricLandmarkSetter.doctree  skshapes.applications.barycentric_landmark_setter.barycentric_coordinates.doctree  skshapes.applications.barycentric_landmark_setter.doctree  skshapes.applications.browser.Browser.doctree  skshapes.applications.browser.doctree  skshapes.applications.doctree  skshapes.applications.vertices_landmark_setter.LandmarkSetter.doctree  skshapes.applications.vertices_landmark_setter.LandmarkSetterMultipleMeshes.doctree  skshapes.doctree  (+100 more)
_sources/: index.rst.txt  motivation.rst.txt  sg_execution_times.rst.txt
api/: modules.html  skshapes.applications.html  skshapes.convolutions.html  skshapes.data.html  skshapes.decimation.html  skshapes.features.html  skshapes.html  skshapes.input_validation.html  skshapes.loss.html  skshapes.morphing.html  skshapes.multiscaling.html  skshapes.optimization.html  skshapes.tasks.html  skshapes.triangle_mesh.html
arteries-atlas/: README.md  demonstration.ipynb
auto_examples/: index.html  sg_execution_times.html
demo/: demo_landmarks.py
devdoc/: QuadricDecimation.excalidraw  Shape.excalidraw  decimation.py  morphing.excalidraw  numba_decimation.excalidraw  polydata.excalidraw  preprocessing.excalidraw  tasks.excalidraw  typing.excalidraw
docs/: contributing.md  gallery_conf.py  gen_ref_nav.py  index.md  installation.md  requirements.txt
examples/: README.md  README.rst  decimation.py  plot_landmark_setter.py  plot_multiscaling_landmarks.py  plot_signal_multiscale.py  signal_multiscale.py  signal_propagation.py
explanation/: index.html
optional_tests/: curvatureDemo.ipynb  curvature_buet.py  curvature_taubin.py  curvatures_trimesh.py  test_curvatures_trimesh.py  test_taichi.py
skshapes/: __init__.py  _typing.py  documentation_example.py  errors.py  types.py  utils.py
stubs/: skshapes.Circle.html  skshapes.PolyData.html  skshapes.Sphere.html  skshapes.applications.barycentric_landmark_setter.BarycentricLandmarkSetter.html  skshapes.applications.barycentric_landmark_setter.barycentric_coordinates.html  skshapes.applications.barycentric_landmark_setter.html  skshapes.applications.browser.Browser.html  skshapes.applications.browser.html  skshapes.applications.html  skshapes.applications.vertices_landmark_setter.LandmarkSetter.html  skshapes.applications.vertices_landmark_setter.LandmarkSetterMultipleMeshes.html  skshapes.applications.vertices_landmark_setter.LandmarkSetterSingleMesh.html  skshapes.applications.vertices_landmark_setter.closest_vertex.html  skshapes.applications.vertices_landmark_setter.html  skshapes.applications.window_generator.html  skshapes.convolutions.constant_kernel.Constant1Kernel.html  skshapes.convolutions.constant_kernel.constant_1_kernel.html  skshapes.convolutions.constant_kernel.html  skshapes.convolutions.html  skshapes.convolutions.linear_operator.LinearOperator.html  skshapes.convolutions.linear_operator.html  skshapes.convolutions.mesh_convolution.html  skshapes.convolutions.point_convolution.html  skshapes.convolutions.squared_distances.KeOpsSquaredDistances.html  skshapes.convolutions.squared_distances.html  skshapes.convolutions.squared_distances.squared_distances.html  skshapes.features.Moments.html  skshapes.features.html  skshapes.features.implicit_quadrics.html  skshapes.html  skshapes.input_validation.converters.closest_dtype.html  skshapes.input_validation.converters.convert_inputs.html  skshapes.input_validation.converters.detect_array_dtypes.html  skshapes.input_validation.converters.html  skshapes.input_validation.html  skshapes.input_validation.notnone_rules.generator_notnone_rule.html  skshapes.input_validation.notnone_rules.html  skshapes.input_validation.notnone_rules.no_more_than_one.html  skshapes.input_validation.notnone_rules.one_and_only_one.html  skshapes.input_validation.notnone_rules.rule_no_more_than_one.html  (+72 more)
test/: test_convolution.py  test_curvatures.py  test_decimation.py  test_deformation.py  test_device.py  test_implicit_quadrics.py  test_input_validation.py  test_modules_annotations.py  test_moments.py  test_multiscale.py  test_polydata.py  test_registration.py  utils.py
tests/: test_convolution.py  test_curvatures.py  test_decimation.py  test_deformation.py  test_device.py  test_elastic_metrics.py  test_errors.py  test_implicit_quadrics.py  test_input_validation.py  test_loss.py  test_modules_annotations.py  test_moments.py  test_multiscale.py  test_particles.py  test_polydata.py  test_registration.py  test_shell_energy.py  test_taichi.py  test_triangle_mesh.py  utils.py
user_guide/: index.html
(+859 files in other folders)
