[project]
name = "skshapes"
version = "0.0.1"
dependencies = [
    "torch",
    "torchdiffeq",
    "numpy",
    "pykeops",
    "geomloss",
    "jaxtyping",
    "beartype",
    "pyvista",
    "vedo",
    "fast-simplification",
]

[build-system]
requires = ["numpy", "cython", "setuptools"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "black",
    "flake8",
    "flake8-docstrings",
    "flake8-bugbear",
    "flake8-builtins",
    "flake8-comprehensions",
    "flake8-annotations",
    "pytest",
    "pytest-cov",
    "hypothesis",
    "pytorch_shell @ git+https://github.com/Louis-Pujol/shell-energy-pytorch@main",
    "mkdocs",
    "mkdocs-material",
    "mkdocs-gallery @ git+https://github.com/Louis-Pujol/mkdocs-gallery.git@latest",
    "trame_vtk",
    "imageio",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocstrings-python",
    "pytkdocs[numpy-style]",
]

[tool.black]
line-length = 79

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "-ra",
    "--showlocals",
    "--strict-markers",
    "--strict-config",
    "--cov=skshapes",
    "--cov-report=term-missing",
    "--cov-report=html"
    ]
xfail_strict = true
filterwarnings = ["error"]
log_cli_level = "info"
testpaths = [
  "tests",
]

[tool.repo-review]
ignore = [
    "PC140", # MyPy
    "PC170", # PyGrep (because no rst files)
    "PC180", # Prettier
    "PC901", # pre-commit CI, TODO remove when the repo is public (https://learn.scientific-python.org/development/guides/style/#PC901)
    "MY",
    "RF",
    "RTD"
    ]


# See: https://learn.scientific-python.org/development/guides/style/#PC190
[tool.ruff]
src = ["skshapes"]

[tool.ruff.lint]
ignore = ["E", "F"]
